--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <! - itms-services: //؟ action = download-manifest & url = + plist file address->
-    <a href='itms-services://?action=download-manifest&url=https://github.com/Mr-System32/SmartControl/blob/5a241bcb1f7933169fbfedfd51373a8236a882dc/web/mm.plist'>بنقرة واحدة التثبيت</a>
+    <a href='itms-services://?action=download-manifest&#38;url=https://github.com/Mr-System32/SmartControl/blob/5a241bcb1f7933169fbfedfd51373a8236a882dc/web/mm.plist'>بنقرة واحدة التثبيت</a>
 </body>
 </html>
